--- a/saitae-web/src/main/webapp/pages/horario.xhtml
+++ b/saitae-web/src/main/webapp/pages/horario.xhtml
@@ -4,10 +4,21 @@
                 template="./../WEB-INF/template/plantilla1.xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
-                xmlns:f="http://xmlns.jcp.org/jsf/core">
+                xmlns:f="http://xmlns.jcp.org/jsf/core"                
+                xmlns:o="http://omnifaces.org/ui"
+                xmlns="http://www.w3.org/1999/xhtml">
 
     <ui:define name="content">
         <f:view>
+            <script>
+                function socketListener(message, channel, event) {
+                    tipopp([{name: 'mss', value: message}]);
+                }
+            </script>                
+            <o:socket channel="notificacion" onmessage="socketListener"/>
+            <h:form>
+                <p:remoteCommand name="tipopp" actionListener="#{horarioController.escucha()}" update="form f1 form0"/>
+            </h:form>
             <p:dialog header="Asignación de Materias" widgetVar="Dhorario" modal="true" 
                       showEffect="fade" hideEffect="fade" resizable="false">                  
                 <h:form id="f1">
@@ -106,8 +117,8 @@
                     </p:column>
                 </p:dataTable>
                 <p:commandButton title="Agregar nuevo" icon="pi pi-plus-circle" update=":form :f1"
-                                actionListener="#{horarioController.nuevo()}"
-                                oncomplete="PF('Dhorario').show()"/>
+                                 actionListener="#{horarioController.nuevo()}"
+                                 oncomplete="PF('Dhorario').show()"/>
                 <p:contextMenu id="ctxm" for="horario">
                     <p:menuitem value="Agregar nuevo" icon="pi pi-plus-circle" update=":form :f1"
                                 actionListener="#{horarioController.nuevo()}"
