--- a/saitae-web/src/main/webapp/pages/inventario.xhtml
+++ b/saitae-web/src/main/webapp/pages/inventario.xhtml
@@ -5,9 +5,19 @@
                 template="./../WEB-INF/template/plantilla1.xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
-                xmlns:f="http://xmlns.jcp.org/jsf/core">
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:o="http://omnifaces.org/ui">
 
     <ui:define name="content">
+        <script>
+                    function socketListener(message, channel, event) {
+                        tipopp([{name: 'mss', value: message}]);
+                    }
+        </script>                
+        <o:socket channel="tipopp" onmessage="socketListener"/>
+        <h:form>
+            <p:remoteCommand name="tipopp" actionListener="#{tipoController.escucha()}" update="form form0"/>
+        </h:form>
         <h:form id="form">
             <p:growl id="msgs" showDetail="true"/>
             <h1 style="align-content: center;">Administración General de Recursos.</h1>
