--- a/saitae-web/src/main/webapp/pages/lictp.xhtml
+++ b/saitae-web/src/main/webapp/pages/lictp.xhtml
@@ -4,11 +4,21 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:o="http://omnifaces.org/ui">
 
     <body>
         <ui:composition template="./../WEB-INF/template/plantilla1.xhtml">
             <ui:define name="content">
+                <script>
+                    function socketListener(message, channel, event) {
+                        tipopp([{name: 'mss', value: message}]);
+                    }
+                </script>                
+                <o:socket channel="tipopp" onmessage="socketListener"/>
+                <h:form>
+                    <p:remoteCommand name="tipopp" actionListener="#{tipoController.escucha()}" update="form form0"/>
+                </h:form>
                 <h:form id="form">
                     <p:growl id="msgs" showDetail="true"/>
                     <h1 style="align-content: center;">Administración de Permisos y Licencias.</h1>
