Sistema de Inscripción en línea de nuevos estudiantes listo para revisión.

--- a/saitae-web/src/main/webapp/index.xhtml
+++ b/saitae-web/src/main/webapp/index.xhtml
@@ -42,7 +42,7 @@
                     <p:commandButton actionListener="#{loginController.login()}" value="Ingresar"/>
                     <p:column/>
                     <f:facet name="footer">
-                        <h:link value="Nuevo ingreso" outcome="pages/nuevoIngreso.intex"/>
+                        <h:link value="Nuevo ingreso" outcome="pages/inscripcion.intex"/>
                     </f:facet>
                     <p:focus context="panel"/>
                 </h:panelGrid>
