--- a/saitae-web/src/main/webapp/pages/permiso.xhtml
+++ b/saitae-web/src/main/webapp/pages/permiso.xhtml
@@ -9,7 +9,6 @@
     <body>
         <ui:composition template="./../WEB-INF/template/plantilla1.xhtml">
             <ui:define name="content">
-                <f:event listener="#{permisoEstudianteController.inicial()}" type="preRenderView"/>
                 <style>
                     .centred-form{
                         margin: 0 auto;
@@ -22,50 +21,54 @@
                     <p:panel header="Gestionar nuevo permiso">
                         <h:panelGrid id="w" columns="2" columnClasses="label, value">
                             <p:outputLabel for="console" value="Tipo del permiso: *" />
-                            <p:selectOneMenu id="console" value="#{permisoEstudianteController.p.tipoPermiso1.idtipoPermiso}" 
-                                             style="width:125px" title="Seleccione el permiso que necesita">
-                                <f:selectItems value="#{permisoEstudianteController.listaPermisos()}"/>
-                                <f:ajax render="console1" execute="SeleccionPermiso"/>
+                            <p:selectOneMenu id="console" value="#{permisoController.p.tipoPermiso1.idtipoPermiso}" 
+                                             style="width:200px;" title="Seleccione el permiso que necesita">
+                                <f:selectItems value="#{permisoController.listaPermisos()}"/>
+                                <p:ajax update="console1"/>
                             </p:selectOneMenu>
 
-                            <p:outputLabel for="console" value="¿Para quién es el permiso?: *" />
-                            <p:selectOneMenu id="console1" value="#{permisoEstudianteController.id}" 
-                                             style="width:125px" title="Seleccione el permiso que necesita"
-                                             disabled="#{!permisoEstudianteController.seleccionPermiso}">
-                                <f:selectItems value="#{permisoEstudianteController.listaEstudiantes()}"/>
-                                <p:ajax update="m frm:summit"/>
+                            <p:outputLabel for="console1" value="¿Para quién es el permiso?: *" />
+                            <p:selectOneMenu id="console1" value="#{permisoController.id}" 
+                                             style="width:200px;" title="Seleccione el permiso que necesita"
+                                             disabled="#{!permisoController.seleccionPermiso}">
+                                <f:selectItems value="#{permisoController.listaEstudiantes()}" />
+                                <p:ajax event="itemSelect" listener="#{permisoController.onItemSelect}" 
+                                        update="m summit" />
                             </p:selectOneMenu>
 
                             <p:column/>
-                            <p:panelGrid id="m" columns="6" columnClasses="label, value, label, value, label, value">
+                            <p:panelGrid id="m" columns="6">
                                 <h:outputLabel value="Bachillerato: "/>
-                                <h:outputLabel value="#{permisoEstudianteController.m.grado.gradoPK.gradoModalidad}"/>
+                                <h:outputLabel value="#{permisoController.m.grado.gradoPK.gradoModalidad}"/>
 
                                 <h:outputLabel value="Grado: "/>
-                                <h:outputLabel value="#{permisoEstudianteController.m.grado.gradoPK.idgrado}"/>
+                                <h:outputLabel value="#{permisoController.m.grado.gradoPK.idgrado}"/>
 
                                 <h:outputLabel value="Sección: "/>
-                                <h:outputLabel value="#{permisoEstudianteController.m.grado.gradoPK.gradoSeccion}"/>
+                                <h:outputLabel value="#{permisoController.m.grado.gradoPK.gradoSeccion}"/>
                             </p:panelGrid>
 
                             <h:outputLabel value="Motivo: *"/>
-                            <p:inputText value="#{permisoEstudianteController.p.permisosMotivo}" required="true" />
+                            <p:inputText value="#{permisoController.p.permisosMotivo}" required="true" />
 
                             <h:outputLabel value="Solicitado por: "/>
-                            <h:outputLabel value="#{permisoEstudianteController.us.persona.personaNombre} 
-                                           #{permisoEstudianteController.us.persona.personaApellido}"/>
+                            <h:outputLabel value="#{permisoController.us.persona.personaNombre} 
+                                           #{permisoController.us.persona.personaApellido}"/>
 
                             <p:outputLabel for="mask" value="Fecha de inicio:" />
-                            <p:calendar id="mask" value="#{permisoEstudianteController.p.permisosPK.permisoFechaInicio}" 
-                                        pattern="dd-MM-yyyy" mask="true" />
+                            <p:calendar id="mask" value="#{permisoController.p.permisosPK.permisoFechaInicio}" 
+                                        pattern="dd-MM-yyyy" mask="true" required="true"/>
 
                             <p:outputLabel for="mask1" value="Fecha de finalización: " />
-                            <p:calendar id="mask1" value="#{permisoEstudianteController.p.permisoFechafin}" 
+                            <p:calendar id="mask1" value="#{permisoController.p.permisoFechafin}" required="true" 
                                         pattern="dd-MM-yyyy" mask="true" />
+
+                            <p:column/>
+                            <p:commandButton id="summit" value="Solicitar" disabled="#{!permisoController.seleccionEstudiante}"
+                                             actionListener="#{permisoController.guardar()}" update=":form0:msgs frm"/>
                         </h:panelGrid>
                     </p:panel>
-                    <p:commandButton id="summit" value="Solicitar" disabled="#{!permisoEstudianteController.seleccionEstudiante}"
-                                     actionListener="#{permisoEstudianteController.guardar()}" update=":form0:msgs frm"/>
+
                 </h:form>
             </ui:define>
 
